# ancl

./: .gitignore  CMakeLists.txt  LICENSE  README.md
Ancl/: Base.hpp  CMakeLists.txt  RTTI.hpp  Tracker.hpp
Ancl/AnclIR/: BasicBlock.cpp  BasicBlock.hpp  Constexpr.cpp  Constexpr.hpp  IR.hpp  IRProgram.cpp  IRProgram.hpp  Parameter.hpp  Program.hpp  Value.hpp
Ancl/AnclIR/Constant/: Constant.hpp  FloatConstant.hpp  Function.cpp  Function.hpp  GlobalValue.cpp  GlobalValue.hpp  GlobalVariable.cpp  GlobalVariable.hpp  IntConstant.hpp
Ancl/AnclIR/DataLayout/: Alignment.cpp  Alignment.hpp
Ancl/AnclIR/Instruction/: AllocaInstruction.cpp  AllocaInstruction.hpp  BinaryInstruction.cpp  BinaryInstruction.hpp  BranchInstruction.cpp  BranchInstruction.hpp  CallInstruction.cpp  CallInstruction.hpp  CastInstruction.cpp  CastInstruction.hpp  CompareInstruction.cpp  CompareInstruction.hpp  Instruction.cpp  Instruction.hpp  LoadInstruction.cpp  LoadInstruction.hpp  MemberInstruction.cpp  MemberInstruction.hpp  MemoryCopyInstruction.cpp  MemoryCopyInstruction.hpp  MemorySetInstruction.cpp  MemorySetInstruction.hpp  PhiInstruction.cpp  PhiInstruction.hpp  ReturnInstruction.cpp  ReturnInstruction.hpp  StoreInstruction.cpp  StoreInstruction.hpp  SwitchInstruction.cpp  SwitchInstruction.hpp  TerminatorInstruction.hpp  UnaryInstruction.hpp
Ancl/AnclIR/Type/: ArrayType.cpp  ArrayType.hpp  FloatType.cpp  FloatType.hpp  FunctionType.cpp  FunctionType.hpp  IntType.cpp  IntType.hpp  LabelType.cpp  LabelType.hpp  PointerType.cpp  PointerType.hpp  StructType.cpp  StructType.hpp  Type.cpp  Type.hpp  VoidType.cpp  VoidType.hpp
Ancl/CodeGen/: MIRGenerator.hpp  VRegClassSelector.hpp
Ancl/CodeGen/Finalization/: PrologueEpiloguePass.cpp  PrologueEpiloguePass.hpp  StackAddressPass.cpp  StackAddressPass.hpp
Ancl/CodeGen/MachineIR/: GlobalDataArea.cpp  GlobalDataArea.hpp  LocalDataArea.cpp  LocalDataArea.hpp  MBasicBlock.cpp  MBasicBlock.hpp  MFunction.hpp  MIRProgram.hpp  MInstruction.cpp  MInstruction.hpp  MOperand.hpp  MType.hpp
Ancl/CodeGen/RegisterAllocation/: DestructiveInstructionPass.cpp  DestructiveInstructionPass.hpp  GlobalColoringAllocator.cpp  GlobalColoringAllocator.hpp  LinearScanAllocator.cpp  LinearScanAllocator.hpp  LiveOutPass.cpp  LiveOutPass.hpp  PhiEliminationPass.cpp  PhiEliminationPass.hpp  RegisterSelector.cpp  RegisterSelector.hpp
Ancl/CodeGen/Selection/: InstructionSelector.cpp  InstructionSelector.hpp  SelectionGraph.hpp  SelectionNode.hpp  SelectionTree.hpp  VRegClassSelector.hpp  VirtualRegClassSelector.cpp  VirtualRegClassSelector.hpp
Ancl/DataLayout/: Alignment.cpp  Alignment.hpp
Ancl/Driver/: Driver.cpp  Driver.hpp
Ancl/Emitters/: AssemblyEmitter.cpp  AssemblyEmitter.hpp  GASEmitter.cpp  GASEmitter.hpp  IREmitter.cpp  IREmitter.hpp  IntelEmitter.cpp  IntelEmitter.hpp  MIREmitter.cpp  MIREmitter.hpp
Ancl/Grammar/: CMakeLists.txt
Ancl/Grammar/AST/: AST.hpp  ASTProgram.hpp  ForwardDecl.hpp  Program.hpp
Ancl/Grammar/AST/Base/: ASTNode.hpp  Location.hpp  Position.hpp
Ancl/Grammar/AST/Declaration/: Declaration.hpp  EnumConstDeclaration.hpp  EnumDeclaration.hpp  FieldDeclaration.hpp  FunctionDeclaration.hpp  LabelDeclaration.hpp  ParameterDeclaration.hpp  RecordDeclaration.cpp  RecordDeclaration.hpp  StorageClass.hpp  TagDeclaration.hpp  TranslationUnit.hpp  TypeDeclaration.hpp  TypedefDeclaration.hpp  ValueDeclaration.hpp  VariableDeclaration.hpp
Ancl/Grammar/AST/Statement/: CaseStatement.hpp  CompoundStatement.hpp  DeclStatement.hpp  DefaultStatement.hpp  DoStatement.hpp  ForStatement.hpp  GotoStatement.hpp  IfStatement.hpp  LabelStatement.hpp  LoopJumpStatement.hpp  ReturnStatement.hpp  Statement.hpp  SwitchCase.hpp  SwitchStatement.hpp  ValueStatement.hpp  WhileStatement.hpp
Ancl/Grammar/AST/Type/: ArrayType.hpp  BuiltinType.hpp  EnumType.hpp  FunctionType.hpp  NodeType.hpp  PointerType.hpp  (+6 more)
Ancl/Grammar/Antlr/: CLexer.g4  CMakeLists.txt  CParser.g4
Ancl/Graph/: DominatorTree.cpp  DominatorTree.hpp
Ancl/Logger/: Logger.cpp  Logger.hpp
Ancl/Optimization/: CleanPass.cpp  CleanPass.hpp  DCEPass.cpp  DCEPass.hpp  DVNTPass.cpp  DVNTPass.hpp  SSAPass.cpp  SSAPass.hpp
Ancl/Preprocessor/: CMakeLists.txt  Preprocessor.cpp  Preprocessor.hpp  README.md
Ancl/Preprocessor/Lexer/: Lexer.cpp  Lexer.hpp  Lexer.l  LexerInternal.hpp  Token.hpp
Ancl/Preprocessor/Streams/: Streams.cpp  Streams.hpp
Ancl/SymbolTable/: DotConverter.hpp  Scope.cpp  Scope.hpp  SymbolTable.hpp
Ancl/Visitor/: AstDotVisitor.hpp  AstVisitor.hpp  BuildAstVisitor.cpp  BuildAstVisitor.hpp  ConstExprAstVisitor.hpp  ExprTypeAstVisitor.hpp  IRGenAstVisitor.cpp  IRGenAstVisitor.hpp  IntConstExprAstVisitor.hpp  SemanticAstVisitor.cpp  SemanticAstVisitor.hpp
(+53 files in other folders)
